// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal customization should be supported 1`] = `
"<div class=\\"wrapper test-class  wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><h2 class=\\"\\">Modal</h2><style>
        h2 {
          font-size: 1.5rem;
          line-height: 1.6;
          font-weight: normal;
          text-align: center;
          margin: 0;
          display: inline-flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          word-break: break-word;
          text-transform: capitalize;
          color: #000;
        }
      </style><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            max-width: 90vw;
            max-height: 90vh;
            width: 100px;
            overflow: hidden;
            display: flex;
            flex-direction: column;
            position: relative;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: 5px;
            padding: 16pt;
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(0px, -30px, 0px);
            transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1) 0s,
              transform 0.35s cubic-bezier(0.4, 0, 0.2, 1) 0s;
          }

          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0px, -30px, 0px);
          }

          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px);
          }

          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px);
          }

          .wrapper-leave-active {
            opacity: 0;
            transform: translate3d(0px, -30px, 0px);
          }

          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div>"
`;

exports[`Modal should render correctly 1`] = `
"<div class=\\"backdrop  backdrop-wrapper-enter\\"><div class=\\"layer\\"></div><div class=\\"content\\"><div class=\\"wrapper   wrapper-enter\\" role=\\"dialog\\" tabindex=\\"-1\\"><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><h2 class=\\"\\">Modal</h2><style>
        h2 {
          font-size: 1.5rem;
          line-height: 1.6;
          font-weight: normal;
          text-align: center;
          margin: 0;
          display: inline-flex;
          flex-shrink: 0;
          justify-content: center;
          align-items: center;
          word-break: break-word;
          text-transform: capitalize;
          color: #000;
        }
      </style><p class=\\"\\">This is a modal</p><style>
        p {
          font-size: 0.875rem;
          line-height: 1.6;
          font-weight: normal;
          text-align: center;
          margin: 0;
          display: inline-flex;
          justify-content: center;
          align-items: center;
          word-break: break-word;
          text-transform: uppercase;
          color: #666;
        }
      </style><div class=\\"content \\"><p>Some content contained within the modal.</p></div><style>
        .content {
          margin: 0 -16pt;
          padding: 16pt 16pt 8pt;
          overflow-y: auto;
          position: relative;
        }

        .content > :global(*:first-child) {
          margin-top: 0;
        }

        .content > :global(*:last-child) {
          margin-bottom: 0;
        }
      </style><div></div><footer><button type=\\"button\\" class=\\"btn mock \\"><div class=\\"text\\">Cancel</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 1.375rem;
            height: 2.5rem;
            line-height: 2.5rem;
            min-width: 12.5rem;
            width: auto;
            border-radius: 5px;
            font-weight: 400;
            font-size: .875rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #666;
            background-color: #fff;
            border: 1px solid #eaeaea;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --geist-ui-button-padding: 1.375rem;
            --geist-ui-button-height: 2.5rem;
            --geist-ui-button-color: #666;
            --geist-ui-button-bg: #fff;
          }

          .btn:hover,
          .btn:focus {
            color: #000;
            --geist-ui-button-color: #000;
            background-color: #fff;
            border-color: #000;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -1px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
        </style></button><button type=\\"button\\" class=\\"btn mock \\"><div class=\\"text\\">Submit</div><style>
          .btn {
            box-sizing: border-box;
            display: inline-block;
            padding: 0 1.375rem;
            height: 2.5rem;
            line-height: 2.5rem;
            min-width: 12.5rem;
            width: auto;
            border-radius: 5px;
            font-weight: 400;
            font-size: .875rem;
            user-select: none;
            outline: none;
            text-transform: capitalize;
            justify-content: center;
            text-align: center;
            white-space: nowrap;
            transition: background-color 200ms ease 0ms, box-shadow 200ms ease 0ms,
              border 200ms ease 0ms, color 200ms ease 0ms;
            position: relative;
            overflow: hidden;
            color: #666;
            background-color: #fff;
            border: 1px solid #eaeaea;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            --geist-ui-button-padding: 1.375rem;
            --geist-ui-button-height: 2.5rem;
            --geist-ui-button-color: #666;
            --geist-ui-button-bg: #fff;
          }

          .btn:hover,
          .btn:focus {
            color: #000;
            --geist-ui-button-color: #000;
            background-color: #fff;
            border-color: #000;
            cursor: pointer;
            pointer-events: auto;
            box-shadow: none;
            transform: translate3d(0px, 0px, 0px);
          }

          .btn :global(.text) {
            position: relative;
            z-index: 1;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            line-height: inherit;
            top: -1px;
          }

          .btn :global(.text p),
          .btn :global(.text pre),
          .btn :global(.text div) {
            margin: 0;
          }
        </style></button></footer><style>
        footer {
          display: flex;
          overflow: hidden;
          width: 100%;
          height: 3.625rem;
          position: absolute;
          bottom: 0;
          left: 0;
          right: 0;
          border-top: 1px solid #eaeaea;
          border-bottom-left-radius: 5px;
          border-bottom-right-radius: 5px;
        }

        footer > :global(button.btn + button.btn) {
          border-left: 1px solid #eaeaea;
        }

        div {
          height: 3.625rem;
          flex-shrink: 0;
        }
      </style><div tabindex=\\"0\\" class=\\"hide-tab\\" aria-hidden=\\"true\\"></div><style>
          .wrapper {
            max-width: 90vw;
            max-height: 90vh;
            width: 26rem;
            overflow: hidden;
            display: flex;
            flex-direction: column;
            position: relative;
            box-sizing: border-box;
            background-color: #fff;
            color: #000;
            border-radius: 5px;
            padding: 16pt;
            box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
            opacity: 0;
            outline: none;
            transform: translate3d(0px, -30px, 0px);
            transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1) 0s,
              transform 0.35s cubic-bezier(0.4, 0, 0.2, 1) 0s;
          }

          .wrapper-enter {
            opacity: 0;
            transform: translate3d(0px, -30px, 0px);
          }

          .wrapper-enter-active {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px);
          }

          .wrapper-leave {
            opacity: 1;
            transform: translate3d(0px, 0px, 0px);
          }

          .wrapper-leave-active {
            opacity: 0;
            transform: translate3d(0px, -30px, 0px);
          }

          .hide-tab {
            outline: none;
            overflow: hidden;
            width: 0;
            height: 0;
            opacity: 0;
          }
        </style></div></div><div class=\\"offset\\"></div><style>
            .backdrop {
              position: fixed;
              top: 0;
              left: 0;
              display: flex;
              align-content: center;
              align-items: center;
              flex-direction: column;
              justify-content: center;
              height: 100vh;
              width: 100vw;
              overflow: auto;
              z-index: 1000;
            }

            .content {
              display: flex;
              align-items: center;
              justify-content: center;
              position: relative;
              z-index: 1001;
              outline: none;
            }

            .offset {
              height: 0;
              opacity: 0;
              display: flex;
              background-color: transparent;
            }

            .layer {
              position: fixed;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              width: 100%;
              height: 100%;
              opacity: 0.25;
              background-color: black;
              transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1);
              pointer-events: none;
              z-index: 1000;
            }

            .backdrop-wrapper-enter .layer {
              opacity: 0;
            }

            .backdrop-wrapper-enter-active .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave .layer {
              opacity: 0.25;
            }

            .backdrop-wrapper-leave-active .layer {
              opacity: 0;
            }
          </style></div>"
`;
